# math-algorithm-rust

./: Cargo.toml  README.md
src/chapter2/: README.md
src/chapter2/codes/: code01_1.rs  code01_2.rs  code01_3.rs  code01_4.rs  code02_1.rs  code02_2.rs  code03_1.rs  code04_1.rs  code04_2.rs  code04_3.rs  code06_1.rs
src/chapter2/problem/: prob1.rs  prob2.rs  prob5_3.rs  prob5_4.rs
src/chapter3/: README.md
src/chapter3/codes/: code01_1.rs  code01_2.rs  code01_3.rs  code02_1.rs  code02_2.rs  code03_1.rs  code04_1.rs  code04_2.rs  code05_1.rs  code06_1.rs  code06_2.rs  code06_3.rs  code06_4.rs  code06_5.rs  code06_6.rs  code07_1.rs  code07_2.rs  code07_3.rs  code08_1.rs
src/chapter3/problem/: prob1.rs  prob2_1.rs  prob2_2.rs  prob3_1.rs  prob3_2.rs  prob3_3.rs  prob3_4.rs  prob4_1.rs  prob4_2.rs  prob5_1.rs  prob6_1.rs  prob7_1.rs  prob7_2.rs
src/chapter4/: README.md
src/chapter4/codes/: code01_1.rs  code02_1.rs  code02_2.rs  code03_1.rs  code04_1.rs  code05_1.rs  code05_2.rs  code05_2_stack.rs  code05_3.rs  code06_1.rs  code06_2.rs  code06_3.rs  code06_4.rs  code06_5.rs  code06_6.rs  code07_1.rs
src/chapter4/problem/: prob1_1.rs  prob1_2.rs  prob1_3.rs  prob1_4.rs  prob2_1.rs  prob2_2.rs  prob3_1.rs  prob3_2.rs  prob4_1.rs  prob4_2.rs  prob4_3.rs  prob5_1.rs  prob5_2.rs  prob5_3.rs  prob5_4.rs  prob6_1.rs  prob6_2.rs  prob7_1.rs  prob7_2.rs  prob7_3.rs
src/chapter5/: README.md
src/chapter5/codes/: code02_1.rs  code02_2.rs  code03_1.rs  code03_2.rs  code04_1.rs  code05_1.rs  code05_2.rs  code06_1.rs  code07_1.rs  code07_2.rs  code09_1.rs  code09_2.rs  code10_1.rs  code10_2.rs  code10_3.rs  code10_3_extra.rs  code10_4.rs
src/chapter5/problem/: prob02_1.rs  prob02_2.rs  prob03_1.rs  prob04_1.rs  prob04_2.rs  prob05_1.rs  prob06_1.rs  prob07_1.rs  prob07_2.rs  prob08_1.rs  prob08_2.rs  prob08_3.rs  prob09_1.rs  prob09_2.rs  prob09_3.rs  prob10_1.rs  prob10_2.rs  prob10_3.rs  prob10_4.rs
